# weather-dashboard

./: .dockerignore  .env  .env_sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
accounts/: middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: celery.py
config/settings/: base.py
core/: asgi.py  urls.py  wsgi.py
static/: weather_dashboard.html
weather/: filters.py  models.py  serializers.py  services.py  swagger_params.py  tasks.py  urls.py  views.py
weather/migrations/: 0001_initial.py
weather_dashboard/: asgi.py  settings.py  urls.py  wsgi.py
